# project-salmo-omlas

./: .gitignore  README.md  pyproject.toml  requirements.txt
db/: schema.sql
notebooks/: 01_explore_data.ipynb  02_immune_pathways.ipynb  03_crispr_targets.ipynb
src/salmo_omlas/: __init__.py  cli.py  config.py  db.py  demo_seed.py  web.py
src/salmo_omlas/ingest/: __init__.py  _util.py  crispr.py  ensembl.py  kegg.py  mirna.py  salmotifdb.py  string_db.py
src/salmo_omlas/query/: __init__.py  core.py  crispr_queries.py
tests/: test_ingest.py  test_query.py
